# earthatlas

./: pyproject.toml
notebooks/: sentinel2.ipynb  virtualizarr-goes-west.ipynb
src/earthatlas/: bands.py
